--- a/scss/_csstree.scss
+++ b/scss/_csstree.scss
@@ -83,8 +83,8 @@
 			
 			 + ol
 			{
-				background: url(../libs/builder/icons/arrow-right.svg) 0px .3rem no-repeat;
-				background-size:12px 12px;
+				background: url(../libs/builder/icons/arrow-right.svg) 5px .3rem no-repeat;
+				background-size:10px 10px;
 				margin: -1.8rem 0 0 0rem;
 				padding: 2rem 0 0 2rem;
 				height: 0;
@@ -108,8 +108,8 @@
 
 		li input:checked + ol
 		{
-			background: url(../libs/builder/icons/arrow-down.svg) 0px .1rem no-repeat;
-			background-size:12px 12px;
+			background: url(../libs/builder/icons/arrow-down.svg) 5px .1rem no-repeat;
+			background-size:10px 10px;
 			margin: -1.8em 0 0 0rem;
 			padding: 2rem 0 0 2rem;
 			height: auto;
